@@ -1,1 +1,1 @@
-0.5.0
+0.6.0
