@@ -1,3 +1,10 @@
+2006-06-11    <tino@firebird.03.softkill.net>
+
+	* dbm.c (main): added return values of dbm
+	(ex): other return values added
+	(db_open): timeout now gives the old return while errors return
+	general error
+
 2006-06-06    <tino@firebird.03.softkill.net>
 
 	* dbm.c (c_delete): added delete of key only if data matches
